Fix some CSS issues with mobile viewports and spacing and Flex behavior

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   font-family: lato, sans-serif;
-  background-color: #E5D7C5;
+  background-color: #F0EBE6;
 }
 
 .App-logo {
@@ -39,7 +39,10 @@
   }
 }
 body{
-  background-color: #FFFEFC;
+  background-color: #F0EBE6;
+  display: flex;
+  justify-content: center;
+  padding: 11px;
 }
 
 .container {
@@ -49,7 +52,7 @@ body{
     flex-wrap: wrap; /* Allow items to wrap */
     justify-content: stretch; /* Align items to the start */
     font-family: lato, sans-serif;
-    background-color: #fffefc;
+    background-color: #F0EBE6;
 }
 
 /* Styles for the icon card component */
@@ -185,12 +188,12 @@ body{
     flex: 1;
     border-top: 1px solid #F8D4D2;
     border-bottom: none;
-    border-left: 1.5px #FFFEFC;
+    border-left: 1.5px #F0EBE6;
     border-right: none;
     padding: 10px; /* Adjust padding as needed */
     cursor: pointer;
     transition: background-color border 0.3s;
-    background-color: #fffefc;
+    background-color: #F0EBE6;
     color: #726d6d;
     text-decoration: none;
     margin: 0;
@@ -244,7 +247,6 @@ h3{
   margin-bottom: 1vh;
 }
 .instructions{
-  margin:54px;
   display: flexbox;
   font-family: lato, sans-serif;
 
@@ -257,7 +259,6 @@ h3{
     gap: 11px;
     width: 100%;
 }
-
 
 /* Styles for the download link on hover */
 .download-link:hover {
@@ -273,10 +274,10 @@ h3{
     padding-right:5px;
     font-size: 12px;
     border-radius: 5px; /* Rounded corners */
-    border: 1.5px solid #fffefc; /* Default border */
+    border: 1.5px solid #F0EBE6; /* Default border */
     cursor: pointer; /* Pointer cursor on hover */
     transition: background-color 0.3s, border 0.3s; /* Smooth transition */
-    background-color: #fffefc;
+    background-color: #F0EBE6;
     margin: 5px; /* Space between options */
     text-align: center; /* Center text */
     font-family: 'Fira Mono', monospace;
@@ -300,7 +301,6 @@ h3{
     .grid {
         flex-direction: column; /* Change to one column layout */
         margin: 18px; /* Set margin to 18px */
-        padding:18px;
     }
 }
 
@@ -477,6 +477,7 @@ h3{
     position: relative;
     flex: 1;
     display: flex;
+    gap:11px;
     align-items: center;
 }
 
@@ -485,7 +486,6 @@ h3{
     flex: 1;
     width: 100%;
     padding: 15px; /* Increased padding for larger search bar */
-    margin-right: 15px; /* Adjust margin if needed */
     border: 1.5px solid #F8D4D2;
     border-radius: 5px;
     font-family: 'Fira Mono', monospace;
